# SpatialCompassV

./: .gitignore  .readthedocs.yml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  Untitled.ipynb  index.html  justfile  mkdocs.yml  pyproject.toml  requirements.txt
.github/: ISSUE_TEMPLATE.md
docs/: api.rst  conf.py  index.rst  installation.md  mkdocs.yml  requirements.txt  tutorials.rst
docs/_static/css/: custom.css
docs/source/: .conf.py.swp  conf.py  index.md  index.rst  installation.md  tutorials.rst  usage.md
docs/stylesheets/: extra.css
docs/tutorials/cell_analysis/: Untitled.ipynb  index.md
docs/tutorials/gene_analysis/: ex.md  index.md  test.ipynb
installation/: index.html
search/: search_index.json
src/scomv/: __init__.py  cell.py  cell_pipeline.py  cli.py  dendrogram.py  gene.py  gene_pipeline.py  gene_view_tool.py  nmf.py  plot_3d.py  spatial_deg.py  test.ipynb
src/scomv/dataset/: breast_gene_annotate.csv
src/scomv/geometry/: calculate_distance.py
src/scomv/preparation/: choose_roi.py  scomv_calc_vector.py  skny_calc_distance.py
tests/: __init__.py  test_scomv.py
usage/: index.html
