[project]
name = "scomv"
version = "0.1.0"
description = "Spatial omics analysis tools for cell/gene clustering from a astandard region"
readme = "README.md"
authors = [
  {name = "Ryosuke Nomura", email = "nomubare123@g.ecc.u-tokyo.ac.jp"}
]
maintainers = [
  {name = "Ryosuke Nomura", email = "nomubare123@g.ecc.u-tokyo.ac.jp"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
  "typer"
]
requires-python = ">= 3.9"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
]

[project.urls]
bugs = "https://github.com/RyosukeNomural/scomv/issues"
changelog = "https://github.com/RyosukeNomural/scomv/blob/master/changelog.md"
homepage = "https://github.com/RyosukeNomural/scomv"

[project.scripts]
scomv = "scomv.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
